--- a/packages/checkout/tsconfig.json
+++ b/packages/checkout/tsconfig.json
@@ -23,7 +23,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@fugata/shared": ["../../packages/shared/src"]
+      "@fugata/shared": ["../shared/src"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
