--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^11.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-validator-jsonschema": "^5.0.2",
     "uuid": "^11.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -42,6 +43,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
