--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,10 +4,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "dependencies": {
-    "class-validator": "^0.14.1",
     "axios": "^1.6.7"
   }
 }
