--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -4,12 +4,13 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "composite": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@fugata/shared": ["./src"]
