--- a/packages/api-gateway/package.json
+++ b/packages/api-gateway/package.json
@@ -22,10 +22,12 @@
     "axios": "^1.6.0",
     "fastify": "^5.4.0",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "undici": "^6.21.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5"
   }
 } 
