--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.28",
     "next-auth": "^4.24.5",
     "postcss": "^8.4.35",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
