--- a/packages/api-gateway/Dockerfile
+++ b/packages/api-gateway/Dockerfile
@@ -11,12 +11,17 @@ COPY packages/api-gateway/package*.json ./packages/api-gateway/
 # Install dependencies
 RUN npm install
 
+# Copy source code for shared module
+COPY packages/shared/src ./packages/shared/src
+COPY packages/shared/tsconfig.json ./packages/shared/
+
 # Copy source code for API Gateway
 COPY packages/api-gateway/src ./packages/api-gateway/src
 COPY packages/api-gateway/tsconfig.json ./packages/api-gateway/
 COPY packages/api-gateway/.env ./packages/api-gateway/
 
 # Build shared module
+WORKDIR /app/packages/shared
 RUN npm run build
 
 # Set working directory for API Gateway
