--- a/packages/api-gateway/package.json
+++ b/packages/api-gateway/package.json
@@ -6,8 +6,8 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "node dist/index.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start:debug": "ts-node-dev --inspect --respawn --transpile-only src/index.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+    "start:debug": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only src/index.ts",
     "start:prod": "node dist/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
@@ -17,6 +17,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fugata/shared": "1.0.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/redis": "^7.0.2",
     "axios": "^1.6.0",
@@ -28,6 +29,7 @@
     "undici": "^6.21.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.5"
+    "@types/jsonwebtoken": "^9.0.5",
+    "tsconfig-paths": "^4.2.0"
   }
 } 
