--- a/packages/api-gateway/tsconfig.json
+++ b/packages/api-gateway/tsconfig.json
@@ -18,6 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@fugata/shared": ["../shared/src"]
     }
   },
   "include": ["src/**/*"],
