--- a/packages/checkout/package.json
+++ b/packages/checkout/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.76.1",
     "autoprefixer": "^10.4.17",
     "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.28",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
