--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,19 @@
     "no-console": "warn",
     "prefer-const": "error"
   },
+  "overrides": [
+    {
+      "files": ["packages/dashboard/**/*.ts", "packages/dashboard/**/*.tsx"],
+      "env": {
+        "browser": true,
+        "node": false
+      },
+      "rules": {
+        "no-undef": "off",
+        "@typescript-eslint/no-unused-vars": "error"
+      }
+    }
+  ],
   "ignorePatterns": [
     "node_modules/",
     "dist/",
