--- a/packages/payment-data/package.json
+++ b/packages/payment-data/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fugata/shared": "1.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "typeorm": "^0.3.20",
