--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,8 @@ services:
       PAYMENT_LINK_URL: http://localhost:8081
       KAFKA_BROKERS: kafka:29092
       PARTNER_COMMUNICATOR_URL: http://partner-communicator:3003
+      PAYMENT_DATA_URL: http://payment-data:3001
+      SETTINGS_SERVICE_URL: http://settings-service:3000
       TOKEN_VAULT_URL: http://token-vault:3006
     env_file:
       - ./packages/payment-processor/.env
@@ -142,6 +144,10 @@ services:
       kafka:
         condition: service_healthy
       partner-communicator:
+        condition: service_started
+      payment-data:
+        condition: service_started
+      settings-service:
         condition: service_started
       token-vault:
         condition: service_started
